Fixed: ' The phone # still needs to be aligned to the right side of Jobseekers. '

--- a/css/altres.css
+++ b/css/altres.css
@@ -236,7 +236,7 @@ h4 {
 	color: #FFFFFF;
 	position: absolute;
 	top: 18px;
-	right: 26px;
+	right: 22px;
 	text-align: right;
 	font-weight: 300;
 }
